# papersort

./: .gitignore  Dockerfile  Makefile  README.md  docker.env.example  main.py  papersort.py  pyproject.toml  requirements.txt
.cursor/rules/: python_rules
dbx/: __init__.py  dropbox.py
docsorter/: docindex.py  docllm.py  docsorter.py  folder_matcher.py  llm_mistral.py  llm_openai.py
gdrive/: __init__.py  gdrive.py
models/: __init__.py  base.py  mistral.py  openai.py
papersort/: __init__.py
spec/: architecture.txt  cli.txt  copy.txt  design.txt  docindex.txt  docsorter.txt  googledrive.txt  goolgedrive.txt  metadata.md  metadata_cache.txt  models.txt  storage.txt
storage/: __init__.py  base.py  dbx.py  gdrive.py  local.py
tests/: test_gdrive.py
tests/gdrive/: test_gdrive.py
tests/manual/: gdrive-test.py
tests/storage/: __init__.py  test_dropbox.py  test_gdrive.py  test_local.py
textui/: __init__.py
utils/: __init__.py  gen_docker_env.py  retry.py
workflows/: __init__.py  deduplication.py  docsorter.py  file_metadata.py  filing.py  folder_matcher.py  ingress_log.py  metadata_cache.py  repair.py
